--- a/tools/bt/src/main/resources/META-INF/native-image/resource-config.json
+++ b/tools/bt/src/main/resources/META-INF/native-image/resource-config.json
@@ -6,6 +6,8 @@
     "pattern":"\\QMETA-INF/services/java.lang.System$LoggerFinder\\E"
   }, {
     "pattern":"\\QMETA-INF/services/java.time.zone.ZoneRulesProvider\\E"
+  }, {
+    "pattern":"java.base:\\Qsun/text/resources/LineBreakIteratorData\\E"
   }]},
   "bundles":[]
 }
