--- a/.github/workflows/nativeCompile.yml
+++ b/.github/workflows/nativeCompile.yml
@@ -14,27 +14,27 @@ permissions:
 jobs:
   build:
     name: bt and st on ${{ matrix.os }}-${{ matrix.arch }}
-    runs-on: ${{ matrix.label  }}
+    runs-on: ${{ matrix.label }}
     strategy:
       matrix:
         # See: https://docs.github.com/en/actions/concepts/runners/about-github-hosted-runners#overview-of-github-hosted-runners
         # ... and follow the links to the related Github repositories
         include:
-        - label: ubuntu-latest
-          os: linux
-          arch: x86_64
-        - label: ubuntu-24.04-arm
-          os: linux
-          arch: aarch64
-        - label: windows-latest
-          os: windows
-          arch: x86_64
-        - label: macos-13
-          os: darwin
-          arch: x86_64
-        - label: macos-latest
-          os: darwin
-          arch: arm64
+          - label: ubuntu-latest
+            os: linux
+            arch: x86_64
+          - label: ubuntu-24.04-arm
+            os: linux
+            arch: aarch64
+          - label: windows-latest
+            os: windows
+            arch: x86_64
+          - label: macos-15-intel
+            os: darwin
+            arch: x86_64
+          - label: macos-15
+            os: darwin
+            arch: arm64
     steps:
       - uses: actions/checkout@v4
 
