--- a/tools/bt/build.gradle
+++ b/tools/bt/build.gradle
@@ -22,6 +22,14 @@ application {
     mainClass = "org.applecommander.bastools.tools.bt.Main"
 }
 
+// Disable all Spring AOT processing
+processAot.configure {
+    enabled = false;
+}
+processTestAot.configure {
+    enabled = false;
+}
+
 bootJar {
   manifest {
     attributes(
