Disable Spring AOT processing
Disable Spring AOT processing in build configuration.

--- a/tools/st/build.gradle
+++ b/tools/st/build.gradle
@@ -22,6 +22,14 @@ application {
     mainClass = "org.applecommander.bastools.tools.st.Main"
 }
 
+// Disable all Spring AOT processing
+processAot.configure {
+    enabled = false;
+}
+processTestAot.configure {
+    enabled = false;
+}
+
 bootJar {
   manifest {
     attributes(
